--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devtools-reloader-station",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "devtools reloader station",
   "main": "src/server.js",
   "dependencies": {
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/jiyinyiyong/devtools-reloader-station/issues"
   },
-  "homepage": "https://github.com/jiyinyiyong/devtools-reloader-station"
+  "homepage": "https://github.com/jiyinyiyong/devtools-reloader-station",
+  "bin": {
+    "devtools-reloader-station": "bin/server"
+  }
 }
